# ocel-ocpn-lakehouse

./: .gitignore  CHANGELOG.md  INSTALL.md  MANIFEST.in  PACKAGE_SUMMARY.md  PUBLISHING.md  README.md  README_Details.md  __init__.py  pyproject.toml  setup.py
agent/: __init__.py  config.yaml  example_queries.py  nl_query_agent.py  process_mining_queries.py  query_optimizer.py
analytics/: __init__.py  conformance_checking.py  cost_analysis.py  pm4py_analytics_wrapper.py  process_discovery.py
catalogs/: local.yaml  s3.yaml
dashboards/: executive_dashboard.py
demo/: process_mining_demo.py
docs/: ADMINISTRATOR_GUIDE.md  DEVELOPER_GUIDE.md  PHASE3_ANALYTICS_SUMMARY.md  PRODUCTION_SYSTEM_SUMMARY.md  README.md  SETUP_RUNBOOK.md  USER_GUIDE.md
examples/: basic_usage.py
ingest/: __init__.py  bootstrap_tables.py  check_pyiceberg_api.py  complete_bootstrap.py  complete_ocel_loader.py  complete_ocpn_generator.py  create_missing_ocpn_tables.py  create_missing_tables.py  daft_batch_ocel_loader.py  discover_and_store_ocpn.py  pm4py_iceberg_loader.py  production_bootstrap.py  proper_iceberg_loader.py  simple_ocpn_generator.py  simple_test.pnml  test_partition_field.py  test_sort_field.py  test_transforms.py
ops/: __init__.py  advanced_partitioning.py  commit_staged_files.py  fix_iceberg_registration.py  maintenance_system.py  materialized_views.py  performance_optimization.py  schema_evolution.py  view_refresh_scheduler.py
queries/: direct_file_test.py  final_system_validation.py  production_validation.py  proper_iceberg_test.py  simple_test.py  simple_validation.py  test_queries.py  validation_summary.py
schemas/: complete_ocel_schemas.yaml  complete_ocpn_schemas.yaml  ocel_schemas.yaml  ocpn_schemas.yaml
